# docker

./: .gitignore  .travis.yml  Dockerfile  Dockerfile-branch.model  Dockerfile-nightly.model  Dockerfile.model  HOW-TO-USE.md  LICENSE  README.md  build-local-docker.sh  docker-compose.yml  docker_run.sh  generate_all.sh  generate_and_push.sh  generate_and_push_all.sh  generator.py  get_json_versions.py  prestashop_docker.py  requirements.in  requirements.txt  setup.cfg  update_tags.sh  versions.py  versions.txt  versions14.txt  versions15.txt  versions16.txt  versions17.txt
.docker/: generate-docker.sh  install-environment.sh
.github/workflows/: build.yml  ci.yml  flake8.yml  nose.yml  publish-specific.yml  publish.yml  sync-releases.yml
base/: Dockerfile.model  README.md  docker_tags.sh  generate_tags.sh  tags.txt
base/config_files/: docker_run.sh  docker_updt_ps_domains.php  php.ini  ps-extractor.sh
config_files/: docker_run.sh  docker_updt_ps_domains.php
generator/: __init__.py
images/: docker-compose.yml
images/1.4-5.6-apache/: Dockerfile
images/1.4.0.1/: Dockerfile
images/1.4.0.10/: Dockerfile
images/1.4.0.11/: Dockerfile
images/1.4.0.12/: Dockerfile
images/1.4.0.13/: Dockerfile
images/1.4.0.14/: Dockerfile
images/1.4.0.17/: Dockerfile
images/1.4.0.2/: Dockerfile
images/1.4.0.3/: Dockerfile
images/1.4.0.4/: Dockerfile
images/1.4.0.5/: Dockerfile
prestashop_docker/: __init__.py  backlog.py  distribution_api.py  docker_api.py  generator.py  runner.py  stream.py  stream_parser.py  tag_manager.py  version_manager.py
(+1101 files in other folders)
