[nosetests]
verbosity=3
with-doctest=1
detailed-errors=1
with-coverage=1
cover-html=1
cover-tests=1
cover-erase=1
cover-package=prestashop_docker

[metadata]
description-file = README.md

[flake8]
ignore = E501
max-line-length = 120

[pycodestyle]
ignore = E501
exclude = .git,__pycache__,node_modules
max-line-length = 120
